# takecare-ai

./: .env  README.md  pyproject.toml
agentic/: pyproject.toml
agentic/skills/caregiver-daily-digest/: SKILL.md
agentic/skills/generate-reminder-message/: SKILL.md
agentic/skills/medication-reminder-not-sure/: SKILL.md
agentic/skills/medication-reminder-snooze/: SKILL.md
agentic/skills/medication-reminder-symptom/: SKILL.md
agentic/skills/medication-reminder-taken/: SKILL.md
agentic/skills/safety-double-dose/: SKILL.md
agentic/skills/safety-symptom/: SKILL.md
agentic/src/agentic/: __init__.py
agentic/src/agentic/agents/: __init__.py  caregiver.py  deep_agent.py  nurse.py  safety_officer.py
agentic/src/agentic/fallback_skills/: __init__.py  escalate_case.py  generate_reminder_message.py  handle_not_sure_intent.py  handle_snooze_intent.py  handle_symptom_report.py  handle_taken_intent.py
agentic/src/agentic/graph/: __init__.py  graph.py  nodes.py  state.py
agentic/src/agentic/prompts/: __init__.py
agentic/src/agentic/tools/: __init__.py  check_double_dose.py  check_symptom_severity.py  get_medication_event.py  get_user_profile.py  mark_dose_taken.py  notify_caregiver.py  send_whatsapp_message.py  snooze_dose.py  tools.py  utils.py
api/: pyproject.toml
api/src/api/: __init__.py  main.py
api/src/api/routes/: scheduler.py
api/src/api/scheduler/: __init__.py  reminder_scheduler.py
api/src/api/services/: caregiver_notification.py  whatsapp_sender.py
api/src/api/webhooks/: whatsapp.py
app/: pyproject.toml
app/src/app/: __init__.py  container.py
app/src/app/domain/: __init__.py  entities.py  types.py  value_objects.py
app/src/app/domain/entities/: __init__.py  caregiver.py  medication.py  user.py  (+1 more)
app/src/app/rag/: __init__.py  medication_rag.py
app/src/app/repositories/: __init__.py  caregiver_repository.py  dose_event_repository.py  medication_event_repository.py  medication_repository.py  mock.py  schedule_repository.py  user_repository.py
app/src/app/use_cases/: __init__.py  check_double_dose_risk.py  check_symptom_severity.py  get_medication_event.py  get_schedule.py  get_user_by_phone.py  mark_dose_taken.py  notify_caregiver.py  snooze_dose.py
shared/: pyproject.toml
shared/src/shared/: __init__.py
shared/src/shared/dt/: __init__.py  utils.py
shared/src/shared/i18n/: __init__.py  messages.py
(+19 files in other folders)
