[project]
name = "takecare_ai"
version = "0.1.0"
description = "TakeCare AI — AI-powered medication assistant for elderly (WhatsApp)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "api",
    "agentic",
    "deepagents>=0.4.1",
]

[tool.uv.sources]
api = { workspace = true }
agentic = { workspace = true }

[tool.uv.workspace]
members = ["api", "app", "agentic", "shared"]
