[project]
name = "agentic"
version = "0.1.0"
description = "LangGraph + DeepAgents: graph, tools, skills"
requires-python = ">=3.11"
dependencies = [
    "app",
    "shared",
    "deepagents",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
]
[tool.uv.sources]
app = { workspace = true }
shared = { workspace = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]
