[project]
name = "api"
version = "0.1.0"
description = "FastAPI: webhooks, WhatsApp, caregiver notifications"
requires-python = ">=3.11"
dependencies = [
    "app",
    "agentic",
    "shared",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
[tool.uv.sources]
app = { workspace = true }
agentic = { workspace = true }
shared = { workspace = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
