[project]
name = "app"
version = "0.1.0"
description = "Application logic (DDD): use cases, domain, repositories"
requires-python = ">=3.11"
dependencies = [
    "shared",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
