[project]
name = "shared"
version = "0.1.0"
description = "Shared types and i18n for TakeCare"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
